@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,7 +36,6 @@ import javax.xml.parsers.ParserConfigurationException;
 
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.DOMError;
 import org.w3c.dom.DOMErrorHandler;
@@ -55,11 +54,9 @@ import org.xml.sax.SAXException;
  * @test
  * @bug 8080906 8114834 8206132
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow dom.ls.LSSerializerTest
  * @run testng/othervm dom.ls.LSSerializerTest
  * @summary Test LSSerializer.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class LSSerializerTest {
 
     class DOMErrorHandlerImpl implements DOMErrorHandler {
